Fix header bar cosmetics: Align text with other headers, extend background to edge of page. refs #18504

--- a/src/hg/htdocs/staticStyle/gbStatic.css
+++ b/src/hg/htdocs/staticStyle/gbStatic.css
@@ -44,10 +44,9 @@
 
 /* Page header */
 .gbsPage h1 {
-    padding: 5px 40px;
-    /* needed to adjust margins after menu?  */
-    margin-top: 0;
-    margin-left: -16px;
+    padding: 5px 30px;
+    /* needed to adjust margins after menu?  copying jwest.css here, with odd neg. margin */
+    margin: 0 -16px 5px -16px; 
     background-color: #eaca92;  /* gold */
     color: black;
     font-size: 21px;    /* same as current static pages */
